--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html> 
 <body style="background-color:skyblue;"> 
-<h1 style="color:green;"> Institute of Motivational qoutes </h1> 
+<h1 style="color:green;"> Institute of Motivational quotes - By Bhavya </h1> 
 <q cite="https://timesofindia.indiatimes.com/blogs/the-photo-blog/remembering-gandhi-top-10-quotes-by-the-mahatma/"> In a gentle way, you can shake the world. </q> <br>
 
 <q cite"https://www.nps.gov/mlkm/learn/quotations.htm"> Every nation must now develop an overriding loyalty to mankind as a whole in order to preserve the best in their individual
